@@ -1,3 +1,8 @@
+2002-12-15  Paul Brook  <paul@nowt.org>
+
+	* trans-array.c (g95_conv_array_parameter): Fix partial rank sections.
+	* trans-decl.c (g95_generate_function_code): Use TDI_original.
+
 2002-12-14  Paul Brook  <paul@nowt.org>
 
 	* trans-stmt.c (g95_trans_call): Use resolved symbol name.
